--- a/src/app/div/div.component.html
+++ b/src/app/div/div.component.html
@@ -6,11 +6,8 @@
         <a (click)="navigateTo('group')" [class.active]="fragment == 'group'">Unsere Gruppe</a>
       </nav>
       <a (click)="navigateTo('thank')" [class.active]="fragment == 'thank'">Dank</a>
-      <a (click)="navigateTo('append')" [class.active]="fragment == 'append'">Anhang</a>
-      <nav>
-        <a (click)="navigateTo('impress')" [class.active]="fragment == 'impress'">Impressum</a>
-        <a (click)="navigateTo('source')" [class.active]="fragment == 'source'">Quellen</a>
-      </nav>
+      <a (click)="navigateTo('impress')" [class.active]="fragment == 'impress'">Impressum</a>
+      <a (click)="navigateTo('source')" [class.active]="fragment == 'source'">Quellen</a>
   </nav>
 </div>
 <div class="content" data-spy="scroll" data-target="#navbar-example3" data-offset="0" style="padding: 2rem;">
@@ -26,7 +23,7 @@
   </p>
   <h3 id="group">Unsere Gruppe</h3>
   <img src="/assets/fortress/Fotos_Vitznau_090.jpg" width="900" alt="">
-  <p>v. l. n. r. Erich Steiner, Dario Wigger, Joel Wälti, Stefanie Jäger und Seya Schmassmann</p>
+  <p>Abb. 1: v. l. n. r. Erich Steiner, Dario Wigger, Joel Wälti, Stefanie Jäger und Seya Schmassmann</p>
   <br>
   <p>Da wir eine Gruppe bestehen aus vier lernenden Applikationsentwicklerinnen und -entwickler sind, entschieden wir uns eine Webseite zu realisieren. </p>
   <br>
@@ -40,9 +37,7 @@
 
 
   </p>
-  <h2 id="append">Anhang</h2>
-  <h3 id="source">Quellen</h3>
-  <h3 id="impress">Impressum</h3>
+  <h2 id="impress">Impressum</h2>
   <p>Verantwortlich für den Inhalt von "eine-wehrhafte-schweiz.kairos-solutions.ch":</p>
 
   <p><b>Seya Schmassmann</b><br>
@@ -65,11 +60,205 @@
     5034 Suhr<br>
     joel.waelit@stud.bbbaden.ch</p>
 
+  <p>
+    Alle Texte der Seite wurden durch uns erfasst. 
+    Die Fotos der Festung Vitznau wurden durch uns aufgenommen, die Quelle sämtlicher anderer Bilder sind dem Quellenverzeichnis zu entnehmen.
+    Alle Quellen wurden in unserem obenstehenden Quellenverzeichnis sorgfältig abgelegt. 
+    Für den Inhalt unserer Quellen können wir keine Garantie übernehmen, wendeten jedoch höchste Sorgfalt bei der Wahl der Quellen an. Bei Änderungen der Quell-Informationen erfolgt durch uns keine Anpassung.
+  </p>
 
-    <p>
-      Alle Texte der Seite wurden durch uns erfasst. 
-      Die Fotos der Festung Vitznau wurden durch uns aufgenommen, die Quelle sämtlicher anderer Bilder sind dem Quellenverzeichnis zu entnehmen.
-      Alle Quellen wurden in unserem obenstehenden Quellenverzeichnis sorgfältig abgelegt. 
-      Für den Inhalt unserer Quellen können wir keine Garantie übernehmen, wendeten jedoch höchste Sorgfalt bei der Wahl der Quellen an. Bei Änderungen der Quell-Informationen erfolgt durch uns keine Anpassung.
-    </p>
+  <h2 id="source">Quellen</h2>
+  <h3>Bibliographie</h3>
+  <p>
+    <br>A155 Artilleriewerk Cindey. festung-berland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-10/a155-art-wk-cindey/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A166 Fort du Scex/Ermitage. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-10/a166-fort-du-scexermitage/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A1680 Artilleriewerk La Braye. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-21/a1680-artilleriewerk-la-braye/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A1750ArtilleriewerkGrossTosse.festung-oberland.ch(o.D.)
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-21/a1750-artilleriewerk-gross-tosse/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A2050 Artilleriewerk Burg BE. festung-oberland.ch (o.D.). 
+    <br>UEL: https://www.festung-oberland.ch/sperren/reduitbrigade-21/a2050-art-wk-burg/.
+    <br> [Stand:21.08.2019]
+    <br><br>
+    <br>A2206 Artilleriewerk Vitznau LU. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-24/a2206-art-wk-vitznau/
+    <br>[Stand:21.08.2019]
+    <br><br>
+    <br>A2250 Artilleriewerk Wissifluh. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-22/a2250-art-wk-wissifluh/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A2255 Artilleriewerk Fürigen. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-22/a2255-art-wk-fuerigen/ [Stand: 21.08.2019] 
+    <br><br>
+    <br>A2288 Art Wk Mueterschwanderberg. festung-oberland.ch (o.D.).
+    <br>ULR: https://www.festung-oberland.ch/sperren/reduitbrigade-22/a2288-art-wk-mueterschwanderberg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A250 Artilleriestellung und -werk Dailly-Savatan-Aiguille. festung-oberland.ch (o.D.). ULR: https://www.festung-oberland.ch/sperren/festungsbrigade-10/a250-art-wk-dailly-savatan-aiguille/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A365 Artilleriewerk Champillon. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-10/a365-art-wk-champillon/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A4263 Artilleriewerk Reuenthal. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/grenzbrigade-5/a4263-art-wk-reuenthal/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A5438 Artilleriewerk Ebersberg (ZH). festung-oberland.ch (o.D.) 
+    <br>URL: https://www.festung-oberland.ch/sperren/grenzbrigader-6/a5438-art-wk-ebersberg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A577 Artilleriewerk Pré-Giroud VD. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/grenzbrigade-1/a577_pre_giroud/   [Stand: 21.08.2019]
+    <br><br>
+    <br>A5850 Artilleriewerk Heldsberg. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/grenzbrigade-8/a5850-art-wk-heldsberg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A6020 Artilleriewerk Magletsch. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/a6020-art-wk- magletsch/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A6225 Pak- und Artilleriewerk Tschingel. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/a6225-pak-art-wk-tschingel/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A6355 Artilleriewerk Furggels. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/a6355-art-wk-furggels/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A6375 Artilleriewerk Passatiwand. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/a6375-art-wk-passatiwand/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A6400 Artilleriewerk Castels. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/a6400-art-wk-castels/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A66 Artillerie- und Infanteriewerk Follatères. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-10/a66-art-wk-follateres/  [Stand: 21.08.2019]
+    <br><br>
+    <br>A7330 Artilleriewerk Barbara SZ. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-24/a7330-art-wk-barbara/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A7351/A7352 Art Wk Halsegg SZ. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-24/a7351a7352-art-wk-halsegg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A7833 Art Wk Crestawald. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/gebirgsdivision-12/a7833-art-wk-crestawald/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8310 Artilleriewerk Forte Airolo. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8310-art-wk-forte-airolo/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8370 Artilleriewerk Foppa Grande. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8370-art-wk-foppa-grande/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8385 Artilleriewerk Sasso da Pigna. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8385-art-wk-sasso-da-pigna/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8390 Artilleriewerk San Carlo. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8390-art-wk-san-carlo/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8630 Artilleriewerk Fuchsegg. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8630-art-wk-fuchsegg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8685 Artilleriewerk Gütsch. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8685-art-wk-guetsch/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8730 Artilleriewerk Isleten. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-24/a8730-art-wk-isleten/ [Stand: 21.08.2019]
+    <br><br>
+    <br>A8900 Artilleriewerk Grimsel. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/a8900-art-wk-grimsel/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Artilleriewerk Grandinagia (A8444). Forti_cazioni (o.D.). 
+    <br>URL: http://www.forti.ch/de/wege-werke/san-giacomo/artilleriesforts-grandinagia-a8444/ [Stand: 21.08.2019]
+    <br><br>
+    <br>AXXXX Artilleriewerk Motto Bartolo. festung-oberland.ch (o.D.). 
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/axxxx-art-wk-motto-bartolo/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Blunschi, Peter (2014). Ein «Preusse» als General, ein tiefer Röstigraben und der erste Generalstreik. Watson (24. August 2014). 
+    <br><br>
+    <br>URL: https://www.watson.ch/wissen/schweiz/783016562-ein-preusse-als-general-ein-tiefer-roestigraben-und-der-erste-generalstreik [Stand: 09.05.2019]
+    <br><br>
+    <br>Broschüre Simplonfestung Naters. Simplonfestung Naters (o.D.).
+    <br>URL: https://www.simplonfestungnaters.ch/documents/Broschuere_Simplonfestung_Naters.pdf [Stand: 21.08.2019]
+    <br><br>
+    <br>Bunkerfreunde Anlagen VD. Bunkerfreunde (o.D.). 
+    <br>URL: http://www.bunkerfreunde.ch/anlagen_vd_chateau_de_chillon.html [Stand: 21.08.2019]
+    <br><br>
+    <br>Das Fort Cindey. Festung St. Maurice (o.D.).
+    <br>URL: http://www.forteresse-st-maurice.ch/deutsch/dat_d/c_d/besc_d/fges_c_d.htm [Stand: 21.08.2019]
+    <br><br>
+    <br>Die Festung. Fortezia Stalusa (o.D.). 
+    <br>URL: https://www.stalusa.ch/die-festung/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Dubler, Anne-Marie (2010). Patrizische Orte. Historisches Lexikon der Schweiz HLS (27. September 2010).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/026422/2010-09-27/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Festung Vitznau - Geschichte und Fakten. Verein Festung Vitznau (o.D.). 
+    <br>URL: http://www.festung-vitznau.ch/www/de/07_history_de.php [Stand: 29.07.2019]
+    <br><br>
+    <br>Jäger, Stefanie; Schmassmann, Seya; Wälti, Joel; Wigger, Dario. 2019. Interview des Verfassers mit Erich Steiner, Führer Festung Vitznau, am 27.4.2019 in Vitznau. (o.D.).
+    <br><br>
+    <br>Jorio, Marco (2005). Samuel Gonard. Historisches Lexikon der Schweiz HLS (9. September 2005).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/003229/2005-09-09/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Lischer, Markus (2011). Max Alphons Pfyffer von Altishofen. Historisches Lexikon der Schweiz HLS (2. November 2011).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/024142/2011-11-02/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Operationsbefehle 1 - 22. Bundesarchiv (1939-1945).
+    <br>URL: https://www.swiss-archives.ch/detail.aspx?ID=3848254 [Stand: 21.08.2019]
+    <br><br>
+    <br>Pfyffer von Altishofen. Wikipedia (17. März 2019).
+    <br>URL: https://de.wikipedia.org/wiki/Pfyffer_von_Altishofen [Stand: 27.05.2019]
+    <br><br>
+    <br>Salathé, André (2005). Adolf Germann. Historisches Lexikon der Schweiz HLS (29. August 2005).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/004062/2005-08-29/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Samuel Gonard. Wikipedia (8. Mai 2019).
+    <br>URL: https://de.wikipedia.org/wiki/Samuel_Gonard [Stand: 15.05.2019]
+    <br><br>
+    <br>Schläppi, Daniel (2010). Patriziat. Historisches Lexikon der Schweiz HLS (27. September 2010).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/016374/2010-09-27/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Schweizerisches Inventar der Kulturgüter von nationaler Bedeutung. web.archive.org (1. Januar 2015).
+    <br>URL: https://web.archive.org/web/20150712194406/http://www.bevoelkerungsschutz.admin.ch/internet/bs/de/home/themen/kgs/kgs_inventar/a-objekte.parsys.000114.DownloadFile.tmp/lu2013.pdf [Stand: 27.05.2019]
+    <br><br>
+    <br>Seifert, Roman (o.J.). Oscar Germann. personenlexikon.bl.ch.
+    <br>URL: https://personenlexikon.bl.ch/Oscar_Germann [Stand: 15.05.2019]
+    <br><br>
+    <br>Senn, Hans (2006). Oscar Adolf Germann. Historisches Lexikon der Schweiz HLS (08. Dezember 2006).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/023712/2006-12-08/ [Stand: 15.05.2019]
+    <br><br>
+    <br>Sperre Euschels FR. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-21/art-wk-euschels/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Sperre Gotthard-Pass. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-23/gotthard-pass/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Sperre Sarganser Au. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/sarganser-au/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Sperre Schollberg. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/festungsbrigade-13/schollberg/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Sperrstelle La Tine VD. festung-oberland.ch (o.D.).
+    <br>URL: https://www.festung-oberland.ch/sperren/reduitbrigade-21/la-tine/ [Stand: 21.08.2019]
+    <br><br>
+    <br>Weck, Hervé de (2008). Henri Guisan. Historisches Lexikon der Schweiz HLS (20. Mai 2008).
+    <br>URL: https://hls-dhs-dss.ch/de/articles/019083/2008-05-20/ [Stand: 19.04.2019]
+  </p>
+  <h3>Abbildungsverzeichnis</h3>
+  <p>
+    <br>Abb. 1. Seya Schmassmann (2019). Festungsführer Erich Steiner und IDPA-Gruppe [Stand 22.08.2019]
+    <br><br>
+    <br>Abb. 2. Henri Guisan (o.J.). Wikipedia (27. Juni 2019). 
+    <br>URL: https://upload.wikimedia.org/wikipedia/commons/2/2b/Guisan_Visp_1942_D2.8916.jpg [Stand 24.08.2019]
+    <br><br>
+    <br>Abb. 3. Max Alphons Pfyffer (o.J.). Wikipedia (02. Januar 2010).
+    <br>URL: https://commons.wikimedia.org/wiki/File:C%C3%A9sar_Ritz,_Max_Pfyffer,_Auguste_Es-coffier.jpg [Stand 22.08.2019]
+    <br><br>
+    <br>Abb.4. Oscar Adolf Germann (1889). personenlexikon.bl.ch (23.Dezember2014).
+    <br>URL: https://personenlexikon.bl.ch/Datei:GermannO1889.jpg [Stand 16.07.2019]
+    <br><br>
+    <br>Abb.5.  Samuel Gonard (o.J.). Wikipedia (10. Januar 2006).
+    <br>URL:https://commons.wikimedia.org/wiki/File:Samuel_Gonard.jpg [Stand 22.08.2018]
+  </p>
 </div>
