--- a/src/app/div/div.component.html
+++ b/src/app/div/div.component.html
@@ -63,7 +63,7 @@
   <p><b>Joel Wälti</b><br>
     Neue Aarauerstrasse 105B<br>
     5034 Suhr<br>
-    joel.waelit@stud.bbbaden.ch</p>
+    joel.waelti@stud.bbbaden.ch</p>
 
 
     <p>
