--- a/src/app/views/map/map-fortresses/map-fortresses.component.scss
+++ b/src/app/views/map/map-fortresses/map-fortresses.component.scss
@@ -183,3 +183,23 @@
   color: rgb(104, 104, 104);
   padding-left: 5px;
 }
+
+.map-switch {
+  position: absolute;
+  top: 50px;
+  right: 490px;
+  font-weight: bold;
+
+  a {
+    color: inherit;
+  }
+
+  div {
+    display: inline-block;
+    margin: 0px 5px 0px 5px;
+    border-radius: 50px;
+    padding: 15px;
+    background-color: white;
+    cursor: pointer;
+  }
+}
