--- a/src/app/div/div.component.html
+++ b/src/app/div/div.component.html
@@ -61,7 +61,7 @@
     joel.waelti@stud.bbbaden.ch</p>
 
   <p>
-    Alle Texte der Seite wurden durch uns erfasst. 
+    Alle Texte der Seite wurden durch uns verfasst. 
     Die Fotos der Festung Vitznau wurden durch uns aufgenommen, die Quelle sämtlicher anderer Bilder sind dem Quellenverzeichnis zu entnehmen.
     Alle Quellen wurden in unserem obenstehenden Quellenverzeichnis sorgfältig abgelegt. 
     Für den Inhalt unserer Quellen können wir keine Garantie übernehmen, wendeten jedoch höchste Sorgfalt bei der Wahl der Quellen an. Bei Änderungen der Quell-Informationen erfolgt durch uns keine Anpassung.
