--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -57,7 +57,7 @@
     <div class="card">
       <img class="card-img-top" src="/assets/fortress/Fotos_Vitznau_065.jpg" alt="">
       <div class="card-body">
-        <h3 class="card-title">Wie steht es heute um die Bunkern?</h3>
+        <h3 class="card-title">Wie steht es heute um die Bunker?</h3>
         <p class="card-text">
           Nach dem Ende des Zweiten Weltkrieges wurden einige Bunker stillgelegt, andere wurden zu Museen, Hotels
           oder ähnlichem umgerüstet.
