last minute commit :D

--- a/src/app/views/map/map-opbefs/map-opbefs.component.html
+++ b/src/app/views/map/map-opbefs/map-opbefs.component.html
@@ -1160,6 +1160,7 @@
   </a>
 </div>
 <div class="legend">
+  <div class="legend-inner">
     <div class="color">
       <div class="colorbox" style="background: #4343FF"></div>
       1. AK
@@ -1196,6 +1197,8 @@
       <div class="colorbox" style="background: #BF00BF"></div>
       Westfront
     </div>
+  </div>
+  <span style="font-size: 11px;">AK = Armeekorps; Div = Division</span>
 </div>
 <div class="sidebar">
   <div class="sidebar-header">
@@ -1212,5 +1215,8 @@
         {{ "Operationsbefehl Nr. " +  opbef.number }}
       </li>
     </ul>
+    <div style="margin: 20px 0px;">
+      Die Operationsbefehle 11 und 17 sind für die Verteidigungsstrategie der Schweiz nicht relevant gewesen. Die Operationsbefehle 18 - 22 lag uns nur in Kartenform vor, was eine Digitalisierung nicht möglich machte.
+    </div>
   </div>
 </div>
