--- a/src/app/views/map/map-opbefs/map-opbefs.component.scss
+++ b/src/app/views/map/map-opbefs/map-opbefs.component.scss
@@ -31,14 +31,22 @@
 .legend {
   border-radius: 15px;
   background-color: white;
-  height: 50px;
+  height: 80px;
   position: absolute;
-  left: 30px;
-  bottom: 30px;
+  left: 10px;
+  bottom: 10px;
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
   padding: 10px;
+
+  .legend-inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 10px;
+  }
 
   .color{
       display: flex;
