last commit (hopefully)

--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -25,17 +25,17 @@
       </a>
     </div>
     <div class="menu_item">
-      <a routerLink="/div" fragment="about">
+      <a routerLink="/div" fragment="source">
         Impressum
       </a>
     </div>
     <div class="menu_item">
-      <a routerLink="/div" fragment="thank">
+      <a routerLink="/div" fragment="about">
         Über uns
       </a>
     </div>
     <div class="menu_item">
-      <a outerLink="/div" fragment="append">
+      <a routerLink="/div" fragment="thank">
         Dank
       </a>
     </div>
