--- a/src/app/views/map/map-opbefs/map-opbefs.component.html
+++ b/src/app/views/map/map-opbefs/map-opbefs.component.html
@@ -1191,7 +1191,7 @@
     </div>
     <div class="color">
       <div class="colorbox" style="background: #45ffa2"></div>
-      Div Gempen
+      Div. Gempen
     </div>
     <div class="color">
       <div class="colorbox" style="background: #BF00BF"></div>
@@ -1216,7 +1216,7 @@
       </li>
     </ul>
     <div style="margin: 20px 0px;">
-      Die Operationsbefehle 11 und 17 sind für die Verteidigungsstrategie der Schweiz nicht relevant gewesen. Die Operationsbefehle 18 - 22 lag uns nur in Kartenform vor, was eine Digitalisierung nicht möglich machte.
+      Die Operationsbefehle 11 und 17 sind für die Verteidigungsstrategie der Schweiz nicht relevant gewesen. Die Operationsbefehle 19 - 22 lag uns nur in Kartenform vor, was eine Digitalisierung nicht möglich machte.
     </div>
   </div>
 </div>
